...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFoodItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/etFilter"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteDoneItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




...
